Included parts into the base file

--- a/Nubia/templates/parts/contact.html
+++ b/Nubia/templates/parts/contact.html
@@ -7,7 +7,8 @@
                 <h6 class="text-primary">Join us</h6>
                 <h1>Login/Sign up</h1>
                 <p>
-                    Our friendly team is here to assist you and ensure that your experience with Nubia SPA is nothing short of exceptional. Don't hesitate to get in touch—we're always here to help!
+                    Our friendly team is here to assist you and ensure that your experience with Nubia SPA is nothing
+                    short of exceptional. Don't hesitate to get in touch—we're always here to help!
                 </p>
             </div>
         </div>
@@ -26,8 +27,7 @@
                 <input type="text" class="form-control" placeholder="Password">
             </div>
             <div class="col-md-10">
-                <textarea name="" id="" cols="30" rows="5" class="form-control"
-                    placeholder="Enter Message"></textarea>
+                <textarea name="" id="" cols="30" rows="5" class="form-control" placeholder="Enter Message"></textarea>
             </div>
             <div class="col-md-10 d-grid">
                 <button class="btn btn-primary">Submit</button>
