--- a/Nubia/templates/parts/services.html
+++ b/Nubia/templates/parts/services.html
@@ -1,98 +1,110 @@
   <!--Services section start-->
   <section id="services">
-    <div class="container">
-        <div class="row mb-5">
-            <div class="col-md-8 mx-auto text-center">
-                <h6 class="text-primary">Services</h6>
-                <h1>Our Treatments</h1>
-                <p>Indulge in a blissful escape with our comprehensive selection of spa treatments, 
-                  meticulously crafted to rejuvenate the body, soothe the soul, and restore inner harmony,
-                   ensuring a transformative experience that leaves you feeling pampered, refreshed, 
-                   and radiant from head to toe.
-                </p>
+      <div class="container">
+          <div class="row mb-5">
+              <div class="col-md-8 mx-auto text-center">
+                  <h6 class="text-primary">Services</h6>
+                  <h1>Our Treatments</h1>
+                  <p>Indulge in a blissful escape with our comprehensive selection of spa treatments,
+                      meticulously crafted to rejuvenate the body, soothe the soul, and restore inner harmony,
+                      ensuring a transformative experience that leaves you feeling pampered, refreshed,
+                      and radiant from head to toe.
+                  </p>
 
-            </div>
-        </div>
-        <div class="row g-4 ">
-            <div class="col-lg-4 col-sm-6 ">
-                <div class="service card-effect h-100">
-                    <div class="iconbox">
-                        <i><box-icon name='spa'></box-icon></i>
+              </div>
+          </div>
+          <div class="row g-4 ">
+              <div class="col-lg-4 col-sm-6 ">
+                  <div class="service card-effect h-100">
+                      <div class="iconbox">
+                          <i>
+                              <box-icon name='spa'></box-icon>
+                          </i>
 
-                    </div>
-                    <h5 class="mt-4  mb-2">Sphinx Stone Therapy</h5>
-                    <p>Unwind and rejuvenate with our Sphinx Stone Therapy, 
-                     where heated stones are expertly placed and massaged on your body,
-                    melting away tension and promoting deep relaxation.
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <div class="service card-effect h-100">
-                    <div class="iconbox">
-                        <i><box-icon name='spa'></box-icon></i>
+                      </div>
+                      <h5 class="mt-4  mb-2">Sphinx Stone Therapy</h5>
+                      <p>Unwind and rejuvenate with our Sphinx Stone Therapy,
+                          where heated stones are expertly placed and massaged on your body,
+                          melting away tension and promoting deep relaxation.
+                      </p>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-sm-6">
+                  <div class="service card-effect h-100">
+                      <div class="iconbox">
+                          <i>
+                              <box-icon name='spa'></box-icon>
+                          </i>
 
-                    </div>
-                    <h5 class="mt-4  mb-2">Nubian Royal Massage</h5>
-                    <p>Experience the regal treatment of our Nubian Royal Massage, 
-                    where ancient techniques meet modern luxury to soothe your senses 
-                    and leave you feeling truly pampered.
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <div class="service card-effect h-100">
-                    <div class="iconbox">
-                        <i><box-icon name='spa'></box-icon></i>
+                      </div>
+                      <h5 class="mt-4  mb-2">Nubian Royal Massage</h5>
+                      <p>Experience the regal treatment of our Nubian Royal Massage,
+                          where ancient techniques meet modern luxury to soothe your senses
+                          and leave you feeling truly pampered.
+                      </p>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-sm-6">
+                  <div class="service card-effect h-100">
+                      <div class="iconbox">
+                          <i>
+                              <box-icon name='spa'></box-icon>
+                          </i>
 
-                    </div>
-                    <h5 class="mt-4  mb-2">Nile Delta Aromatherapy</h5>
-                    <p>Immerse yourself in the fragrant scents of the Nile Delta 
-                    with our Aromatherapy experience, where carefully selected oils
-                    and essences transport you to a state of blissful tranquility.
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <div class="service card-effect h-100">
-                    <div class="iconbox">
-                        <i><box-icon name='spa'></box-icon></i>
+                      </div>
+                      <h5 class="mt-4  mb-2">Nile Delta Aromatherapy</h5>
+                      <p>Immerse yourself in the fragrant scents of the Nile Delta
+                          with our Aromatherapy experience, where carefully selected oils
+                          and essences transport you to a state of blissful tranquility.
+                      </p>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-sm-6">
+                  <div class="service card-effect h-100">
+                      <div class="iconbox">
+                          <i>
+                              <box-icon name='spa'></box-icon>
+                          </i>
 
-                    </div>
-                    <h5 class="mt-4  mb-2">Nubian Dilka Scrub</h5>
-                    <p>Indulge in the revitalizing ritual of our Nubian Dilka Scrub,
-                    featuring a blend of traditional ingredients to gently exfoliate 
-                    and nourish your skin, leaving it soft, smooth, and radiant.
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <div class="service card-effect h-100">
-                    <div class="iconbox">
-                        <i><box-icon name='spa'></box-icon></i>
+                      </div>
+                      <h5 class="mt-4  mb-2">Nubian Dilka Scrub</h5>
+                      <p>Indulge in the revitalizing ritual of our Nubian Dilka Scrub,
+                          featuring a blend of traditional ingredients to gently exfoliate
+                          and nourish your skin, leaving it soft, smooth, and radiant.
+                      </p>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-sm-6">
+                  <div class="service card-effect h-100">
+                      <div class="iconbox">
+                          <i>
+                              <box-icon name='spa'></box-icon>
+                          </i>
 
-                    </div>
-                    <h5 class="mt-4  mb-2">Cleopatra's Milk Bath</h5>
-                    <p>Channel the timeless beauty of Cleopatra with our luxurious Milk Bath,
-                     enriched with nourishing ingredients to pamper your skin
-                    and evoke a sense of ancient royalty.
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <div class="service card-effect h-100">
-                    <div class="iconbox">
-                        <i><box-icon name='spa'></box-icon></i>
+                      </div>
+                      <h5 class="mt-4  mb-2">Cleopatra's Milk Bath</h5>
+                      <p>Channel the timeless beauty of Cleopatra with our luxurious Milk Bath,
+                          enriched with nourishing ingredients to pamper your skin
+                          and evoke a sense of ancient royalty.
+                      </p>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-sm-6">
+                  <div class="service card-effect h-100">
+                      <div class="iconbox">
+                          <i>
+                              <box-icon name='spa'></box-icon>
+                          </i>
 
-                    </div>
-                    <h5 class="mt-4  mb-2">Amani Rinas Henna</h5>
-                    <p>Embrace the artistry of Amani Rinas Henna,
-                     where intricate designs adorn your skin in a celebration of beauty
-                    and culture, leaving you feeling empowered and adorned.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!--Services Section End-->
+                      </div>
+                      <h5 class="mt-4  mb-2">Amani Rinas Henna</h5>
+                      <p>Embrace the artistry of Amani Rinas Henna,
+                          where intricate designs adorn your skin in a celebration of beauty
+                          and culture, leaving you feeling empowered and adorned.
+                      </p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+  <!--Services Section End-->
