--- a/Nubia/templates/base.html
+++ b/Nubia/templates/base.html
@@ -15,14 +15,37 @@
     <!--Box Icons-->
     <link rel="stylesheet" href="css/boxicons.min.css">
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="booking" href="https://8000-sherrifisam-landingpage-yflnohrgi6t.ws-eu108.gitpod.io/booking.html">
+    <link rel="stylesheet" href="{% static 'assets/css/style.css'%}>
+    <link rel=" booking" href="https://8000-sherrifisam-landingpage-yflnohrgi6t.ws-eu108.gitpod.io/booking.html">
     <title>Nubia SPA!</title>
 </head>
 
 <body class="index-page">
 
 
+<!-- Include the navigation bar -->
+{% include 'parts/nav.html' %}
+
+<!-- Include the hero section -->
+{% include 'parts/hero.html' %}
+
+<!-- Include the services section -->
+{% include 'parts/services.html' %}
+
+<!-- Include the about section -->
+{% include 'parts/about.html' %}
+
+<!-- Include the portfolio section -->
+{% include 'parts/portfolio.html' %}
+
+<!-- Include the prices section -->
+{% include 'parts/prices.html' %}
+
+<!-- Include the login section -->
+{% include 'parts/login.html' %}
+
+<!-- Include the footer -->
+{% include 'parts/footer.html' %}
 
 
 
@@ -56,18 +79,17 @@
 
 
 
+    <!--Fuction to direct the booking icon boxes to booking.html-->
+    <script>
+        function openBookingPage() {
+            window.location.href = 'booking.html';
+        }
+    </script>
 
- <!--Fuction to direct the booking icon boxes to booking.html-->
- <script>
-    function openBookingPage() {
-        window.location.href = 'booking.html';
-    }
-</script>
-
-<!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
 
 
 </body>
