--- a/Nubia/templates/parts/about.html
+++ b/Nubia/templates/parts/about.html
@@ -8,40 +8,59 @@
                     <h6 class="text-primary">Discover the Difference</h6>
                     <h1>Indulgence Perfected:Your Ultimate Spa Experience</h1>
                     <p>
-                        At Nubia SPA, we take pride in being pioneers in the field of Nubian wellness and spa experiences. With a deep-rooted understanding of ancient Nubian traditions and a commitment to innovation, we've carved a path that merges the rich heritage of Nubian culture with modern spa practices. Our dedication to pushing boundaries and redefining luxury has positioned us at the forefront of the industry, setting new standards for excellence and inspiring others to follow in our footsteps.
+                        At Nubia SPA, we take pride in being pioneers in the field of Nubian wellness and spa
+                        experiences. With a deep-rooted understanding of ancient Nubian traditions and a commitment to
+                        innovation, we've carved a path that merges the rich heritage of Nubian culture with modern spa
+                        practices. Our dedication to pushing boundaries and redefining luxury has positioned us at the
+                        forefront of the industry, setting new standards for excellence and inspiring others to follow
+                        in our footsteps.
                     </p>
 
-                    <div class="about d-flex mt-5"> 
+                    <div class="about d-flex mt-5">
                         <div class="iconbox me-3">
-                            <i><box-icon type='solid' name='heart'></box-icon></i>
+                            <i>
+                                <box-icon type='solid' name='heart'></box-icon>
+                            </i>
                         </div>
                         <div>
                             <h5>About</h5>
                             <p>
-                                At Nubia SPA, we merge ancient Nubian traditions with modern wellness practices to craft an unmatched spa experience. Our goal is simple: to ensure every visit leaves you feeling relaxed, renewed, and revitalized.
+                                At Nubia SPA, we merge ancient Nubian traditions with modern wellness practices to craft
+                                an unmatched spa experience. Our goal is simple: to ensure every visit leaves you
+                                feeling relaxed, renewed, and revitalized.
                             </p>
                         </div>
                     </div>
                     <div class="about d-flex">
                         <div class="iconbox me-3">
-                            <i><box-icon type='solid' name='heart'></box-icon></i>
+                            <i>
+                                <box-icon type='solid' name='heart'></box-icon>
+                            </i>
                         </div>
                         <div>
                             <h5>About</h5>
                             <p>
-                                Nubia SPA is a sanctuary of tranquility and indulgence, founded on a passion for wellness and a deep respect for Nubian culture. Our expert therapists and serene ambiance create a space where you can escape, recharge, and reconnect with your inner harmony.
+                                Nubia SPA is a sanctuary of tranquility and indulgence, founded on a passion for
+                                wellness and a deep respect for Nubian culture. Our expert therapists and serene
+                                ambiance create a space where you can escape, recharge, and reconnect with your inner
+                                harmony.
                             </p>
                         </div>
                     </div>
 
                     <div class="about d-flex">
                         <div class="iconbox me-3">
-                            <i><box-icon type='solid' name='heart'></box-icon></i>
+                            <i>
+                                <box-icon type='solid' name='heart'></box-icon>
+                            </i>
                         </div>
                         <div>
                             <h5>About</h5>
                             <p>
-                                Inspiring self-care and holistic well-being is our mission at Nubia SPA. With a focus on authenticity and innovation, we offer a range of spa experiences designed to nurture your body, soothe your mind, and uplift your spirit. Welcome to our world of luxury and relaxation.
+                                Inspiring self-care and holistic well-being is our mission at Nubia SPA. With a focus on
+                                authenticity and innovation, we offer a range of spa experiences designed to nurture
+                                your body, soothe your mind, and uplift your spirit. Welcome to our world of luxury and
+                                relaxation.
                             </p>
                         </div>
                     </div>
