Extended base to parts

--- a/Nubia/templates/base.html
+++ b/Nubia/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 
@@ -15,7 +16,7 @@
     <!--Box Icons-->
     <link rel="stylesheet" href="css/boxicons.min.css">
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-    <link rel="stylesheet" href="{% static 'assets/css/style.css'%}>
+    <link rel="stylesheet" href="{% static 'css/style.css'%}">
     <link rel=" booking" href="https://8000-sherrifisam-landingpage-yflnohrgi6t.ws-eu108.gitpod.io/booking.html">
     <title>Nubia SPA!</title>
 </head>
