--- a/Nubia/templates/parts/about.html
+++ b/Nubia/templates/parts/about.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <!--About section starts-->
 <section class="row w-100 py-0 bg-light" id="about">
     <div class="col-lg-6 col-img"></div>
@@ -73,3 +76,4 @@
 
 </section>
 <!--About section ends-->
+{% endblock %}
