--- a/Nubia/templates/parts/footer.html
+++ b/Nubia/templates/parts/footer.html
@@ -1,5 +1,7 @@
-<!--Start of Footer-->
+{% extends 'base.html' %}
 
+{% block content %}
+<!--Start of Footer-->
 <footer>
     <div class="footer-top">
         <div class="container">
@@ -55,3 +57,4 @@
         </div>
     </div>
 </footer>
+{% endblock %}
