--- a/Nubia/templates/parts/portfolio.html
+++ b/Nubia/templates/parts/portfolio.html
@@ -1,4 +1,7 @@
- <!--My Portfollio section start-->
+{% extends 'base.html' %}
+
+{% block content %}
+<!--My Portfollio section start-->
  <section id="portfolio">
      <div class="container-fluid">
          <div class="row mb-5">
@@ -121,3 +124,4 @@
      </div>
  </section>
  <!--My Portfolio Section End-->
+ {% endblock %}
