--- a/Nubia/templates/parts/prices.html
+++ b/Nubia/templates/parts/prices.html
@@ -1,4 +1,7 @@
- <!--Start Prices Section-->
+{% extends 'base.html' %}
+
+{% block content %}
+<!--Start Prices Section-->
  <section id="pricing" class="bg-light">
      <div class="container">
          <div class="row mb-5">
@@ -121,3 +124,4 @@
  </section>
 
  <!--Pricing  Section End-->
+ {% endblock %}
