--- a/Nubia/templates/parts/services.html
+++ b/Nubia/templates/parts/services.html
@@ -1,4 +1,7 @@
-  <!--Services section start-->
+{% extends 'base.html' %}
+
+{% block content %}
+<!--Services section start-->
   <section id="services">
       <div class="container">
           <div class="row mb-5">
@@ -107,4 +110,5 @@
           </div>
       </div>
   </section>
-  <!--Services Section End-->
+<!--Services Section End-->
+{% endblock %}
