--- a/Nubia/templates/parts/contact.html
+++ b/Nubia/templates/parts/contact.html
@@ -1,5 +1,7 @@
-<!-- Start of Contact Section -->
+{% extends 'base.html' %}
 
+{% block content %}
+<!-- Start of Contact Section -->
 <section id="contact">
     <div class="container">
         <div class="row mb-5">
@@ -37,3 +39,4 @@
     </div>
 </section>
 <!-- End of Contact Section -->
+{% endblock %}
