--- a/Nubia/templates/parts/hero.html
+++ b/Nubia/templates/parts/hero.html
@@ -1,4 +1,7 @@
- <!--Hero Section starts-->
+{% extends 'base.html' %}
+
+{% block content %}
+<!--Hero Section starts-->
  <div class="hero vh-100 d-flex align-items-center" id="home">
      <div class="container">
          <div class="row">
@@ -19,3 +22,4 @@
      </div>
  </div>
  <!-- Hero Section End-->
+ {% endblock %}
