--- a/Nubia/templates/parts/nav.html
+++ b/Nubia/templates/parts/nav.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <nav class="navbar navbar-expand-lg py-3 sticky-top navbar-light bg-white">
     <div class="container">
         <a class="navbar-brand" href="#">
@@ -35,3 +38,4 @@
 </nav>
 
 <!--NAV BAR END-->
+{% endblock %}
