--- a/Nubia/templates/parts/nav.html
+++ b/Nubia/templates/parts/nav.html
@@ -3,9 +3,7 @@
 {% block content %}
 <nav class="navbar navbar-expand-lg py-3 sticky-top navbar-light bg-white">
     <div class="container">
-        <a class="navbar-brand" href="#">
-            <img class="logo" src="{% static 'images/logo5.png'%}" alt="">
-        </a>
+        <a class="navbar-brand" href="#"><img class="logo"  src= "{%static 'images/logo5.png'%}" alt ="" ></a> 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,4 +36,4 @@
 </nav>
 
 <!--NAV BAR END-->
-{% endblock %}
+{% endblock %} 
